deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8stest-deployment
spec:
  selector:
    matchLabels:
      app: k8stest
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: k8stest
    spec:
      containers:
      - name: k8stest
        image: ernom/k8stest:v1.0.0
        ports:
        - containerPort: 80
