service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service-label-key: k8stest-service-label
  name: k8stest-serice
spec:
  type: ClusterIP
  ports:
  - name: service-port-name
    port: 80
    protocol: TCP
  selector:
    deployment-label-key: k8test-label
