servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8stest-service
spec:
  selector:
    app: k8stest
  ports:
    - port: 80
