ingressv2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8stest-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: k8stest.74.220.28.201.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: k8stest-service
              servicePort: 80
  tls:
    - hosts:
        - k8stest.74.220.28.201.nip.io
